<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Tests.Controller.CreateUserActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createUserNameTxt" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/user_name" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:textColor="@android:color/darker_gray" android:autofillHints=""/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createEmailTxt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/createUserNameTxt" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/email"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:textColor="@android:color/darker_gray"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/createPasswordTxt" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/createEmailTxt" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password" android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            android:textColor="@android:color/darker_gray"/>
    <TextView
            android:text="@string/tap_to_generate_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/createPasswordTxt" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/createAvatarImageView" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="generateUserAvatar" android:contentDescription="@string/avatarimageview"/>
    <Button
            android:text="@string/generate_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/backgroundColorBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/createAvatarImageView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/createUserBtn"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:onClick="generateColorClicked"/>
    <Button
            android:text="@string/create_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/createUserBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:background="@color/colorPrimary"
            android:textColor="@android:color/white" android:onClick="createUserClicked"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createSpinner"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="160dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>