<resources>
    <string name="app_name">Smack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="please_log_in">Please Log In</string>
    <string name="message">message:</string>
    <string name="todo">TODO</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="password">password</string>
    <string name="create_user">create user</string>
    <string name="generate_background_color">generate background color</string>
    <string name="avatarimageview">AvatarImageView</string>
    <string name="channel_description">channel description</string>
    <string name="channel_name">channel name</string>
    <string name="add_channel">Add channel</string>
</resources>
